--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -32,6 +32,10 @@
                         &#xA0;<span translate="global.menu.entities.demande">demande</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="identityEntity"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.identity">identity</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="address"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.address">address</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="project"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.project">project</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
