--- a/src/main/webapp/scripts/components/menu/stepsMenu.html
+++ b/src/main/webapp/scripts/components/menu/stepsMenu.html
@@ -1,42 +1,32 @@
-<div class="steps">
-	<div class="box">
-	    <div class="icon">
-	        <div class="number"><span class="btn-lg white">0</span></div>
-	        <div class="title">
-	            <p translate="etudier.information.title">Information</p>
-	        </div>
-	    </div>
+<div class="row row-center">
+    <div class="step-number-horizontal" ng-class="stepnumber != 0 ? 'step-number-disabled' : ''">
+    	<div class="step-number step-number-green row-center">0</div>
+	    <div class="row">
+	    	<p translate="etudier.information.title">Information</p>
+		</div>
 	</div>
-	<div class="box disable">
-	    <div class="icon">
-	        <div class="number"><span class="btn-lg white">1</span></div>
-	        <div class="title">
-	            <p translate="etudier.identity.title">Civil state</p>
-	        </div>
-	    </div>
+    <div class="step-number-horizontal" ng-class="stepnumber != 1 ? 'step-number-disabled' : ''">
+    	<div class="step-number step-number-green row-center">1</div>
+	    <div class="row">
+	    	<p translate="etudier.identity.title">Civil state</p>
+		</div>
 	</div>
-	<div class="box disable">
-	    <div class="icon">
-	        <div class="number"><span class="btn-lg white">2</span></div>
-	        <div class="title">
-	            <p translate="etudier.address.title">Address</p>
-	        </div>
-	    </div>
+    <div class="step-number-horizontal" ng-class="stepnumber != 2 ? 'step-number-disabled' : ''">
+    	<div class="step-number step-number-green row-center">2</div>
+	    <div class="row">
+	    	<p translate="etudier.address.title">Address</p>
+		</div>
 	</div>
-	<div class="box disable">
-	    <div class="icon">
-	        <div class="number"><span class="btn-lg white">3</span></div>
-	        <div class="title">
-	            <p translate="etudier.project.title">Project</p>
-	        </div>
-	    </div>
+    <div class="step-number-horizontal" ng-class="stepnumber != 3 ? 'step-number-disabled' : ''">
+   		<div class="step-number step-number-green row-center">3</div>
+	    <div class="row">
+	    	<p translate="etudier.project.title">Project</p>
+		</div>
 	</div>
-	<div class="box disable">
-	    <div class="icon">
-	        <div class="number"><span class="btn-lg white">4</span></div>
-	        <div class="title">
-	            <p translate="etudier.payment.title">Payment</p>
-	        </div>
-	    </div>
+    <div class="step-number-horizontal" ng-class="stepnumber != 4 ? 'step-number-disabled' : ''">
+   		<div class="step-number step-number-green row-center">4</div>
+	    <div class="row">
+	    	<p translate="etudier.payment.title">Payment</p>
+		</div>
 	</div>
 </div>
