--- a/src/main/webapp/assets/styles/etudier.css
+++ b/src/main/webapp/assets/styles/etudier.css
@@ -1,8 +1,4 @@
 /** STEP NUMBER **/
-.step-number-disabled {
-	opacity: 0.4;
-}
-
 .step-number-horizontal {
 	display: inline-block;
 	text-align: center;
@@ -70,17 +66,17 @@
 	}
 }
 
-/** FORM **/
-.btn-fun{
-	/* Button Background: */
-	background-image: linear-gradient(-180deg, #D8D8D8 0%, #B3B3B3 100%);
-	border: 1px solid #979797;
-	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.20), inset 0px 2px 0px 0px #FFFFFF;
-	border-radius: 6px;
-	/* OK: */
-	font-family: AvenirNext-Bold;
-	font-size: 14px;
-	color: #4A4A4A;
-	line-height: 19px;
-	text-shadow: 0px 1px 0px #FFFFFF;
+/** VALIDATION **/
+.title-underscore > h4 {
+	padding-bottom: 7px;
+	border-bottom: 1px solid black;
+}
+
+.img-checkbox {
+	width: 42px;
+	padding-right: 6px;
+}
+
+.img-checkbox.disabled {
+	opacity:0.2;
 }
