--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -107,7 +107,7 @@
                                 <span>
                                     <span class="glyphicon glyphicon-user"></span>
                                     <span class="hidden-tablet">
-                                        {{account.firstName}}&nbsp;{{account.lastName}}
+                                        {{getAccountName()}}{{account.firstName}}&nbsp;{{account.lastName}}
                                     </span>
                                     <b class="caret"></b>
                                 </span>
