--- a/src/main/webapp/scripts/components/menu/stepsMenu.html
+++ b/src/main/webapp/scripts/components/menu/stepsMenu.html
@@ -1,32 +1,26 @@
 <div class="row row-center">
-    <div class="step-number-horizontal" ng-class="stepnumber != 0 ? 'box-disabled' : ''">
-    	<div class="step-number step-number-green row-center">0</div>
-	    <div class="row">
-	    	<p translate="etudier.information.title">Information</p>
-		</div>
-	</div>
     <div class="step-number-horizontal" ng-class="stepnumber != 1 ? 'box-disabled' : ''">
     	<div class="step-number step-number-green row-center">1</div>
 	    <div class="row">
-	    	<p translate="etudier.identity.title">Civil state</p>
+	    	<p translate="etudier.identity.step.short">Civil state</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="stepnumber != 2 ? 'box-disabled' : ''">
     	<div class="step-number step-number-green row-center">2</div>
 	    <div class="row">
-	    	<p translate="etudier.address.title">Address</p>
+	    	<p translate="etudier.address.step.short">Address</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="stepnumber != 3 ? 'box-disabled' : ''">
    		<div class="step-number step-number-green row-center">3</div>
 	    <div class="row">
-	    	<p translate="etudier.project.title">Project</p>
+	    	<p translate="etudier.project.step.short">Project</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="stepnumber != 4 ? 'box-disabled' : ''">
    		<div class="step-number step-number-green row-center">4</div>
 	    <div class="row">
-	    	<p translate="etudier.payment.title">Payment</p>
+	    	<p translate="etudier.payment.step.short">Payment</p>
 		</div>
 	</div>
 </div>
