--- a/src/main/webapp/assets/styles/etudier.css
+++ b/src/main/webapp/assets/styles/etudier.css
@@ -111,3 +111,12 @@
 	background-color: #3c763d;
 	color: white;
 }
+
+
+/** LIST OF APPLICATION **/
+.applicationListLine {
+	cursor: pointer;
+}
+.applicationListLine:hover {
+	background-color: #ededed;
+}
