creation page identification (documents et biometrics) + fin validation

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -113,9 +113,9 @@
                                 </span>
                     </a>
                     <ul class="dropdown-menu">
-                    	<li ui-sref-active="active"><a ui-sref="address"><span class="glyphicon glyphicon-wrench"></span>
+                    	<li ui-sref-active="active" has-role="ROLE_USAGER"><a ui-sref="address"><span class="glyphicon glyphicon-wrench"></span>
                             &#xA0;<span translate="global.menu.account.settings">Settings</span></a></li>
-                    	<li ui-sref-active="active"><a ui-sref="etudier/rdv"><span class="glyphicon glyphicon-time"></span>
+                    	<li ui-sref-active="active" has-role="ROLE_USAGER"><a ui-sref="etudier/rdv"><span class="glyphicon glyphicon-time"></span>
                             &#xA0;<span translate="global.menu.account.rdv">Rdv</span></a></li>
                         <li ui-sref-active="active"><a ui-sref="password"><span class="glyphicon glyphicon-lock"></span>
                             &#xA0;<span translate="global.menu.account.password">Password</span></a></li>
