create nouveau menu accueil non identifie

--- a/src/main/webapp/scripts/components/menu/boxMenu.html
+++ b/src/main/webapp/scripts/components/menu/boxMenu.html
@@ -1,4 +1,4 @@
-<div class="box" ng-class="disabled ? 'box-disabled' : ''">
+<div class="box" ng-class="{'box-disabled': disabled}">
     <div class="icon">
         <div class="image"><span class="glyphicon glyphicon-{{boxlogo}} btn-lg white"></span></div>
         <div class="info">
