--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -186,6 +186,39 @@ ul#strengthBar {
 	text-align: center;
 }
 
+/* BOUTON ACCUEIL */
+.btn-home {
+    width: 250px;
+    height: 60px;
+    font-size: 16px;
+    border-radius: 15px;
+    margin-top: 40px;
+}
+
+@media (min-width: 768px) {
+	.btn-home {
+	    width: 300px;
+	    height: 100px;
+	    font-size: 22px;
+	    border-radius: 25px;
+	}
+	.btn-home-right {
+		margin-left: 20px
+	}
+}
+
+@media (min-width: 992px) {
+	.btn-home {
+	    width: 350px;
+	    height: 150px;
+	    font-size: 30px;
+	    border-radius: 25px;
+	}
+	.btn-home-right {
+		margin-left: 40px
+	}
+}
+
 /* MENU ACCUEIL */
 
 .white {
