--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -102,6 +102,11 @@
                         </li>
                     </ul>
                 </li>
+                <li ui-sref-active="active" ng-switch-when="false">
+                	<a ui-sref="login">
+                		<span class="glyphicon glyphicon-log-in"></span>&#xA0;<span translate="global.menu.account.login">Authenticate</span>
+                	</a>
+                </li>
                 <li ui-sref-active="active" ng-switch-when="true" ng-class="{active: $state.includes('account')}" class="dropdown pointer">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="">
                                 <span>
