--- a/src/main/webapp/assets/styles/etudier.css
+++ b/src/main/webapp/assets/styles/etudier.css
@@ -120,3 +120,33 @@
 .applicationListLine:hover {
 	background-color: #ededed;
 }
+
+/** BIOMETRICS **/
+ng-camera > .ng-camera-stack {
+    position: relative;
+}
+
+.ng-camera > .ng-camera-stack > .ng-camera-overlay {
+    position: absolute;
+    z-index: 2;
+    width: 311px;
+}
+
+.ng-camera > button {
+	display: inline-block;
+	width: 311px;
+	padding: 6px 12px;
+	margin-top: 5px;
+	margin-bottom: 0px;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	border-color: #2e6da4;
+	color: #fff;
+	background-color: #337ab7;
+}
+
