--- a/src/main/webapp/scripts/components/menu/boxMenu.html
+++ b/src/main/webapp/scripts/components/menu/boxMenu.html
@@ -1,7 +1,7 @@
 <div class="box" ng-class="{'box-disabled': disabled}">
     <div class="icon">
         <div class="image">
-        	<span class="glyphicon glyphicon-{{boxlogo}} btn-lg white"></span>
+        	<span class="fa fa-{{boxlogo}} btn-lg white"></span>
         </div>
         <div class="info">
         	<div class="emptybadge" style="float:left;">&nbsp;</div>
