--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/"><span translate="global.title">jhipster</span> <span class="navbar-version">v{{VERSION}}</span></a>
+            <a class="navbar-brand" href="#/"><span translate="global.title">sejour</span> <span class="navbar-version">v{{VERSION}}</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse" ng-switch="isAuthenticated()">
             <ul class="nav navbar-nav nav-pills navbar-right">
@@ -92,6 +92,21 @@
                         <li active-menu="{{language}}" ng-repeat="language in languages">
                             <a href="" ng-click="changeLanguage(language)">{{language | findLanguageFromKey}}</a>
                         </li>
+                    </ul>
+                </li>
+                <li ng-switch-when="false" ng-show="userType != null" class="dropdown pointer">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                                <span>
+                                    <span class="fa" ng-class="{'fa-user': userType === 'individual', 'fa-industry': userType === 'company'}"></span>
+                                    <span class="hidden-tablet" translate="main.unknown.button.{{userType}}.short">user type</span>
+                                    <b class="caret"></b>
+                                </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                    	<li ng-class="{active: userType === 'individual'}"><a href="" ng-click="choose('individual')"><span class="fa fa-user"></span>
+                            &#xA0;<span translate="main.unknown.button.individual.short">Individual</span></a></li>
+                    	<li ng-class="{active: userType === 'company'}"><a href="" ng-click="choose('company')"><span class="fa fa-industry"></span>
+                            &#xA0;<span translate="main.unknown.button.company.short">Company</span></a></li>
                     </ul>
                 </li>
                 <li ui-sref-active="active" ng-switch-when="false">
