suppression dernier reliquat demande

--- a/src/main/webapp/scripts/components/application/application_list.html
+++ b/src/main/webapp/scripts/components/application/application_list.html
@@ -25,8 +25,8 @@
 						<td>{{application.identity.firstName}}</td>
 						<td>{{getNationality(application.identity.nationality)}}</td>
 						<td>
-							<span translate="sejourApp.TypeDemande.{{application.type}}"></span>
-							<span translate="sejourApp.NatureDemande.{{application.nature}}"></span>
+							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
+							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
 						</td>
 						<td>{{getFormattedDate(application.creationDate)}}</td>
 					</tr>
@@ -49,8 +49,8 @@
 						<td>{{application.userId}}</td>
 						<td>{{getNationality(application.identity.nationality)}}</td>
 						<td>
-							<span translate="sejourApp.TypeDemande.{{application.type}}"></span>
-							<span translate="sejourApp.NatureDemande.{{application.nature}}"></span>
+							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
+							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
 						</td>
 					</tr>
 				</tbody>
@@ -71,8 +71,8 @@
 						<td>{{application.identity.firstName}}</td>
 						<td>{{application.userId}}</td>
 						<td>
-							<span translate="sejourApp.TypeDemande.{{application.type}}"></span>
-							<span translate="sejourApp.NatureDemande.{{application.nature}}"></span>
+							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
+							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
 						</td>
 						<td translate="applicationList.documents"></td>
 					</tr>
@@ -81,8 +81,8 @@
 						<td>{{application.identity.firstName}}</td>
 						<td>{{application.userId}}</td>
 						<td>
-							<span translate="sejourApp.TypeDemande.{{application.type}}"></span>
-							<span translate="sejourApp.NatureDemande.{{application.nature}}"></span>
+							<span translate="sejourApp.ApplicationType.{{application.type}}"></span>
+							<span translate="sejourApp.ApplicationNature.{{application.nature}}"></span>
 						</td>
 						<td translate="applicationList.biometrics"></td>
 					</tr>
