suppression reliquat etudier

--- a/src/main/webapp/scripts/components/menu/stepsMenu.html
+++ b/src/main/webapp/scripts/components/menu/stepsMenu.html
@@ -2,31 +2,31 @@
     <div class="step-number-horizontal" ng-class="{'box-disabled': stepnumber < 1}">
     	<div class="step-number row-center" ng-class="{'step-number-green': stepnumber > 1}">1</div>
 	    <div class="row">
-	    	<p translate="etudier.identity.step.short">Civil state</p>
+	    	<p translate="procedure.identity.step.short">Civil state</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="{'box-disabled': stepnumber < 2}">
     	<div class="step-number row-center" ng-class="{'step-number-green': stepnumber > 2}">2</div>
 	    <div class="row">
-	    	<p translate="etudier.address.step.short">Address</p>
+	    	<p translate="procedure.address.step.short">Address</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="{'box-disabled': stepnumber < 3}">
    		<div class="step-number row-center" ng-class="{'step-number-green': stepnumber > 3}">3</div>
 	    <div class="row">
-	    	<p translate="etudier.project.step.short">Project</p>
+	    	<p translate="procedure.project.step.short">Project</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="{'box-disabled': stepnumber < 4}">
    		<div class="step-number row-center" ng-class="{'step-number-green': stepnumber > 4}">4</div>
 	    <div class="row">
-	    	<p translate="etudier.summary.step.short">Summary</p>
+	    	<p translate="procedure.summary.step.short">Summary</p>
 		</div>
 	</div>
     <div class="step-number-horizontal" ng-class="{'box-disabled': stepnumber < 5}">
    		<div class="step-number row-center" ng-class="{'step-number-green': stepnumber > 5}">5</div>
 	    <div class="row">
-	    	<p translate="etudier.payment.step.short">Payment</p>
+	    	<p translate="procedure.payment.step.short">Payment</p>
 		</div>
 	</div>
 </div>
