--- a/src/main/webapp/scripts/components/application/application_list.html
+++ b/src/main/webapp/scripts/components/application/application_list.html
@@ -1,5 +1,5 @@
 <div ng-cloak>
-    <div class="row title-underscore">
+    <div class="row title-main title-underline">
     	<h4 translate="applicationList.title"></h4>
     </div>
 	<br><br>
