Creation identity family + directive for input birth date and country

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -119,7 +119,7 @@
                                 <span>
                                     <span class="glyphicon glyphicon-user"></span>
                                     <span class="hidden-tablet">
-                                        {{account.firstName}}&nbsp;{{account.lastName}}
+                                        {{account.identity.firstName}}&nbsp;{{account.identity.lastName}}
                                     </span>
                                     <b class="caret"></b>
                                 </span>
