--- a/src/main/webapp/scripts/components/form/fileUpload.html
+++ b/src/main/webapp/scripts/components/form/fileUpload.html
@@ -1,24 +1,20 @@
-<div class="form-group">
-	<label translate="{{::translateKey}}"></label>
-	<tooltip tooltip-text="{{translateKey+'.tooltip'}}"></tooltip>
-	<div class="input-group" ng-repeat="doc in docs" ng-class="{'input-group-file-suppl': $index > 0}">
-		<span class="input-group-addon" ng-click="uploadFileClick($id, $index)"><span class="fa fa-file"></span></span>
-		<input type="file" class="hidden" id="{{::$id}}_{{$index}}" onchange="angular.element(this).scope().uploadFile(this)">
-		<input type="text"
-				class="form-control"
-				ng-model="doc.name"
-				ng-click="uploadFileClick($id, $index)"
-				placeholder="{{translateKey+'.placeholder' | translate}}"
-				readonly="readonly" 
-				ng-required="docs.length == 1">
-		<span class="input-group-addon input-group-addon-file" ng-if="doc.name" ng-click="removeDoc($index)">
-			<span class="glyphicon glyphicon-trash"></span>
-		</span>
-		<span class="input-group-addon input-group-addon-file" ng-if="$index == (docs.length - 1)" ng-click="addDoc($index)" >
-			<span class="glyphicon glyphicon-plus" ng-class="{'img-disabled': !doc.name}"></span>
-		</span>
-	</div>
-	<div ng-show="fileUploadFail">
-        <p class="help-block" translate="entity.validation.file.upload">Upload failed</p>
-    </div>
+<div class="input-group" ng-repeat="doc in docs" ng-class="{'input-group-file-suppl': $index > 0}">
+	<span class="input-group-addon" ng-click="uploadFileClick($id, $index)"><span class="fa fa-file"></span></span>
+	<input type="file" class="hidden" id="{{::$id}}_{{$index}}" onchange="angular.element(this).scope().uploadFile(this)">
+	<input type="text"
+			class="form-control"
+			ng-model="doc.name"
+			ng-click="uploadFileClick($id, $index)"
+			placeholder="{{placeholderKey | translate}}"
+			readonly="readonly" 
+			ng-required="docs.length == 1">
+	<span class="input-group-addon input-group-addon-file" ng-if="doc.name" ng-click="removeDoc($index)">
+		<span class="glyphicon glyphicon-trash"></span>
+	</span>
+	<span class="input-group-addon input-group-addon-file" ng-if="$index == (docs.length - 1)" ng-click="addDoc($index)" >
+		<span class="glyphicon glyphicon-plus" ng-class="{'img-disabled': !doc.name}"></span>
+	</span>
 </div>
+<div ng-show="fileUploadFail">
+       <p class="help-block" translate="entity.validation.file.upload">Upload failed</p>
+   </div>
